--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,37 +9,35 @@ body {
 .heading-primary {
     color: $color-white;
     text-transform: uppercase;
-
     backface-visibility: hidden;
     margin-bottom: 6rem;
-
     &--main {
         display: block;
         font-size: 6rem;
         font-weight: 400;
-        letter-spacing: 3.5rem;
-    
+        letter-spacing: 2.5rem;
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
-        
-        @include respond(phone) {
-            letter-spacing: 1rem;
-            font-family: 5rem;
+        @include respond(tab-port) {
+            font-size: 5.5rem;
+            letter-spacing: 0.9rem;
+            //font-family: 3.4rem;
         }
-        
+        @include respond(phone) {
+            font-size: 4.8rem;
+            letter-spacing: 0.4rem;
+            //font-family: 3.4rem;
+        }
         //animation-delay: 1s;
         animation-iteration-count: 1;
-        
     }
-    
     &--sub {
         display: block;
         font-size: 2rem;
         font-weight: 700;
         letter-spacing: 1.75rem;
         animation: moveInRight 1s ease-out;
-
         @include respond(phone) {
             letter-spacing: .5rem;
         }
@@ -56,18 +54,15 @@ body {
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
-    &--bezeichnung{
+    &--bezeichnung {
         color: $color-white;
     }
-
     @include respond(tab-port) {
         font-size: 3rem;
     }
-
     @include respond(phone) {
         font-size: 2.5rem;
     }
-  
     /*
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -85,17 +80,12 @@ body {
     color: $color-white;
     letter-spacing: .2rem;
     transition: all .2s;
-
-    
-
     @include respond(tab-port) {
         font-size: 3rem;
     }
-
     @include respond(phone) {
         font-size: 2.5rem;
     }
-  
     /*
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -111,7 +101,6 @@ body {
 
 .paragraph {
     font-size: $default-font-size;
-
     &:not(:last-child) {
         margin-bottom: 3rem;
     }
