--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,21 +1,21 @@
-body{
+body {
     background-color: $color-white;
     /*
     background-image: url(../../new_img/back.jpg);
     background-size: auto;
     background-repeat: round;*/
 }
+
 .section-about {
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
-
     @include respond(tab-port) {
         padding: 20rem 0;
     }
 }
-.section-features1 {
 
+.section-features1 {
     background-image: /**linear-gradient(
         to right bottom,
         rgba($color-primary, 0.8),
@@ -25,81 +25,69 @@ body{
     background-size: cover;
     transform: skewY(-7deg);
     margin: 0 0 10rem 0;
-
-    & > * {
+    &>* {
         transform: skewY(7deg);
     }
-
     @include respond(tab-port) {
         padding: 15rem 0;
     }
-
 }
+
 .section-features2 {
-    background-image: 
-    url(../../new_img/back.jpg);
+    background-image: url(../../new_img/back.jpg);
     /*background-image: linear-gradient(
         to right bottom,
         rgba($color-white, 1),
         rgba($color-primary, 1));*/
     //background-color: $color-primary;
-    padding: 15rem 0;
+    padding: 10rem 0;
     background-size: cover;
     transform: skewY(-7deg);
     margin: 0 0 10rem 0;
-
-    & > * {
+    &>* {
         transform: skewY(7deg);
     }
-
     @include respond(tab-port) {
-        padding: 15rem 0;
+        padding: 10rem 0;
     }
-
 }
 
 .section-features3 {
-
-    background-image: 
-    url(../../new_img/back.jpg);
+    background-image: url(../../new_img/back.jpg);
     background-color: $color-primary;
-    padding: 15rem 0;
+    padding: 10rem 0;
     background-size: cover;
     transform: skewY(-7deg);
     margin: 0 0 10rem 0;
-
-    & > * {
+    &>* {
         transform: skewY(7deg);
     }
-
     @include respond(tab-port) {
-        padding: 15rem 0;
+        padding: 10rem 0;
     }
-
 }
+
 .section-features4 {
-    background-image: 
-    url(../../new_img/back.jpg);
+    background-image: url(../../new_img/back.jpg);
     /*background-image: linear-gradient(
         to right bottom,
         rgba($color-platin, 0.8),
         rgba($color-black, 0.8)),
     url(../img/nat-4.jpg);
     background-color: $color-primary;*/
-    padding: 15rem 0;
+    padding: 10rem 0;
     background-size: cover;
     transform: skewY(-7deg);
     margin: 0 0 10rem 0;
-
-    & > * {
+    &>* {
         transform: skewY(7deg);
     }
-
     @include respond(tab-port) {
-        padding: 15rem 0;
+        padding: 10rem 0;
     }
-
 }
+
+
 /*
 .section-features3 {
 
@@ -125,11 +113,11 @@ body{
 }
 
 */
+
 .section-tours {
     //background-color: $color-grey-light-1;
     padding: 1rem 0 8rem 0rem;
     //margin-top: -10rem;
-
     @include respond(tab-port) {
         padding: 1rem 0 8rem 0;
     }
@@ -138,7 +126,6 @@ body{
 .section-stories {
     position: relative;
     padding: 15rem 0;
-
     @include respond(tab-port) {
         padding: 10rem 0;
     }
@@ -146,37 +133,27 @@ body{
 
 .section-book {
     margin-top: 10vh;
-    padding: 10rem 0;
+    padding: 5rem 0;
+    min-height: 400px;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
-
     @include respond(tab-port) {
         padding: 10rem 0;
     }
 }
 
 .book {
-    background-image: linear-gradient(105deg, 
-                                    rgba($color-white, .9) 0%,
-                                    rgba($color-white, .9) 50%,
-                                    transparent 50%);
+    background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 50%, transparent 50%);
     background-size: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
-
     @include respond(tab-land) {
-        background-image: linear-gradient(105deg, 
-        rgba($color-white, .9) 0%,
-        rgba($color-white, .9) 65%,
-        transparent 65%);
+        background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 65%, transparent 65%);
         background-size: cover;
     }
-
     @include respond(tab-port) {
-        background-image: linear-gradient(to right, 
-        rgba($color-white, .9) 0%,
-        rgba($color-white, .9) 100%);
+        background-image: linear-gradient(to right, rgba($color-white, .9) 0%, rgba($color-white, .9) 100%);
     }
-/*
+    /*
     &__form {
         width: 80%;
         padding: 6rem;
@@ -190,4 +167,36 @@ body{
         }
         
     }*/
+}
+
+#map {
+    height: 500px;
+    margin: 0 4rem 0 4rem;
+}
+
+.marker {
+    background-image: url('../../assets/pin.png');
+    background-size: cover;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.user-location {
+    background-image: url('../../assest/user_location.png');
+    background-size: cover;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.mapboxgl-popup {
+    max-width: 100px;
+}
+
+.mapboxgl-popup-content {
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
 }
